@@ -18,80 +18,57 @@ import net.sourceforge.fenixedu.persistenceTier.ExcepcaoPersistencia;
 import net.sourceforge.fenixedu.persistenceTier.grant.IPersistentGrantContract;
 import net.sourceforge.fenixedu.persistenceTier.grant.IPersistentGrantCostCenter;
 import net.sourceforge.fenixedu.persistenceTier.grant.IPersistentGrantOrientationTeacher;
-import net.sourceforge.fenixedu.persistenceTier.grant.IPersistentGrantType;
 
 public class CreateOrEditGrantContract extends Service {
 
-    public void run(InfoGrantContract infoGrantContract) throws FenixServiceException,
-            ExcepcaoPersistencia {
-        IPersistentGrantType pGrantType = persistentSupport.getIPersistentGrantType();
+    public void run(InfoGrantContract infoGrantContract) throws FenixServiceException, ExcepcaoPersistencia {
         IPersistentGrantContract pGrantContract = persistentSupport.getIPersistentGrantContract();
-        IPersistentGrantOrientationTeacher pGrantOrientationTeacher = persistentSupport
-                .getIPersistentGrantOrientationTeacher();
-        IPersistentGrantCostCenter pGrantCostCenter = persistentSupport.getIPersistentGrantCostCenter();
-
         final GrantContract grantContract;
         if (infoGrantContract.getContractNumber() == null) {
-
             // set the contract number!
-            Integer maxNumber = pGrantContract.readMaxGrantContractNumberByGrantOwner(infoGrantContract
-                    .getGrantOwnerInfo().getIdInternal());
-            Integer newContractNumber = new Integer(maxNumber.intValue() + 1);
+            Integer maxNumber = pGrantContract.readMaxGrantContractNumberByGrantOwner(infoGrantContract.getGrantOwnerInfo().getIdInternal());
+            Integer newContractNumber = Integer.valueOf(maxNumber + 1);
             infoGrantContract.setContractNumber(newContractNumber);
 
             grantContract = DomainFactory.makeGrantContract();
         } else {
-            grantContract = pGrantContract.readGrantContractByNumberAndGrantOwner(infoGrantContract
-                    .getContractNumber(), infoGrantContract.getGrantOwnerInfo().getIdInternal());
+            grantContract = pGrantContract.readGrantContractByNumberAndGrantOwner(infoGrantContract.getContractNumber(), infoGrantContract.getGrantOwnerInfo().getIdInternal());
         }
 
-        GrantOwner grantOwner = (GrantOwner) persistentObject.readByOID(GrantOwner.class, infoGrantContract
-                .getGrantOwnerInfo().getIdInternal());
-
+        GrantOwner grantOwner = rootDomainObject.readGrantOwnerByOID(infoGrantContract.getGrantOwnerInfo().getIdInternal());
         grantContract.setGrantOwner(grantOwner);
 
-        GrantType grantType = pGrantType.readGrantTypeBySigla(infoGrantContract.getGrantTypeInfo()
-                .getSigla());
-        if (grantType == null)
+        GrantType grantType = GrantType.readBySigla(infoGrantContract.getGrantTypeInfo().getSigla());
+        if (grantType == null) {
             throw new GrantTypeNotFoundException();
+        }
         grantContract.setGrantType(grantType);
 
-        GrantOrientationTeacher grantOrientationTeacher = (GrantOrientationTeacher) persistentObject
-                .readByOID(GrantOrientationTeacher.class, infoGrantContract
-                        .getGrantOrientationTeacherInfo().getIdInternal());
-
+        GrantOrientationTeacher grantOrientationTeacher = rootDomainObject.readGrantOrientationTeacherByOID(infoGrantContract.getGrantOrientationTeacherInfo().getIdInternal());
         if (grantOrientationTeacher == null) {
-            if (infoGrantContract.getIdInternal() != null
-                    || !infoGrantContract.getIdInternal().equals(new Integer(0)))
-                grantOrientationTeacher = pGrantOrientationTeacher
-                        .readActualGrantOrientationTeacherByContract(infoGrantContract.getIdInternal(),
-                                new Integer(0));
-
-            if (grantOrientationTeacher == null) {
-                grantOrientationTeacher = createNewGrantOrientationTeacher(infoGrantContract
-                        .getGrantOrientationTeacherInfo(), grantContract);
-            } else {
-
-                final Teacher teacher = Teacher
-                        .readByNumber(infoGrantContract.getGrantOrientationTeacherInfo()
-                                .getOrientationTeacherInfo().getTeacherNumber());
-
-                grantOrientationTeacher.setOrientationTeacher(teacher);
-
+            if (infoGrantContract.getIdInternal() != null || !infoGrantContract.getIdInternal().equals(Integer.valueOf(0))) {
+                IPersistentGrantOrientationTeacher pGrantOrientationTeacher = persistentSupport.getIPersistentGrantOrientationTeacher();
+                grantOrientationTeacher = pGrantOrientationTeacher.readActualGrantOrientationTeacherByContract(infoGrantContract.getIdInternal(), Integer.valueOf(0));
             }
 
-        }
+            if (grantOrientationTeacher == null) {
+                grantOrientationTeacher = createNewGrantOrientationTeacher(infoGrantContract.getGrantOrientationTeacherInfo(), grantContract);
+            } else {
+                final Teacher teacher = Teacher.readByNumber(infoGrantContract.getGrantOrientationTeacherInfo().getOrientationTeacherInfo().getTeacherNumber());
 
+                grantOrientationTeacher.setOrientationTeacher(teacher);
+            }
+        }
         grantContract.setGrantOrientationTeacher(grantOrientationTeacher);
 
         if (infoGrantContract.getGrantCostCenterInfo() != null
                 && infoGrantContract.getGrantCostCenterInfo().getNumber() != null) {
-            GrantCostCenter grantCostCenter = pGrantCostCenter
-                    .readGrantCostCenterByNumber(infoGrantContract.getGrantCostCenterInfo().getNumber());
-            if (grantCostCenter == null)
+            IPersistentGrantCostCenter pGrantCostCenter = persistentSupport.getIPersistentGrantCostCenter();
+            GrantCostCenter grantCostCenter = pGrantCostCenter.readGrantCostCenterByNumber(infoGrantContract.getGrantCostCenterInfo().getNumber());
+            if (grantCostCenter == null) {
                 throw new InvalidGrantPaymentEntityException();
+            }
             grantContract.setGrantCostCenter(grantCostCenter);
-
         } else {
             grantContract.setGrantCostCenter(null);
         }
@@ -104,12 +81,12 @@ public class CreateOrEditGrantContract extends Service {
     private GrantOrientationTeacher createNewGrantOrientationTeacher(InfoGrantOrientationTeacher grantOrientationTeacherInfo, GrantContract grantContract)
             throws FenixServiceException, ExcepcaoPersistencia {
         
-        final Teacher teacher = Teacher.readByNumber(grantOrientationTeacherInfo
-                .getOrientationTeacherInfo().getTeacherNumber());
+        final Teacher teacher = Teacher.readByNumber(grantOrientationTeacherInfo.getOrientationTeacherInfo().getTeacherNumber());
 
         final GrantOrientationTeacher newGrantOrientationTeacher;
-        if (teacher == null)
+        if (teacher == null) {
             throw new GrantOrientationTeacherNotFoundException();
+	    }
 
         newGrantOrientationTeacher = DomainFactory.makeGrantOrientationTeacher();
         newGrantOrientationTeacher.setBeginDate(grantOrientationTeacherInfo.getBeginDate());
